css:90%;react:components:80%

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <title>React App</title>
 </head>
@@ -13,166 +13,7 @@
 <body>
   <div class="root">
 
-    <div class="header">
-      <p>cineflex</p>
-    </div>
-    <div class="padding-header"></div>
-
-    <p class="title">Selecione o filme</p>
-    <div class="movie-scroll">
-      <img src="./assets/img/movieimage.png" alt="movieimage">
-      <img src="./assets/img/movieimage.png" alt="movieimage">
-      <img src="./assets/img/movieimage.png" alt="movieimage">
-      <img src="./assets/img/movieimage.png" alt="movieimage">
-    </div>
-
-
-    <div class="padding"></div>
-    <p class="title">Selecione o horário</p>
-    <div class="padding"></div>
-    <div class="time-selector">
-      <div class="sessions">
-        <h1>Quinta-feira - 24/06/2021</h1>
-        <div class="times">
-          <p>15:00</p>
-          <p>19:00</p>
-        </div>
-      </div>
-      <div class="padding"></div>
-      <div class="sessions">
-        <h1>Sexta-feira - 24/06/2021</h1>
-        <div class="times">
-          <p>15:00</p>
-          <p>19:00</p>
-          <p>19:00</p>
-        </div>
-      </div>
-    </div>
-    <div class="padding"></div>
-
-
-    <p class="title">Selecione o assento</p>
-    <div class="padding"></div>
-    <div class="seat-selector">
-      <div class="seat-map">
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-        <p>01</p>
-      </div>
-    </div>
-    <div class="caption">
-      <div class="selected">
-        <p class="circle"></p>
-        <h6>Selecionado</h6>
-      </div>
-      <div class="avaliable">
-        <p class="circle"></p>
-        <h6>Disponível</h6>
-      </div>
-      <div class="not-avaliable">
-        <p class="circle"></p>
-        <h6>Indisponível</h6>
-      </div>
-    </div>
-    <div class="padding"></div>
-
-    <div class="name-cpf">
-      <p>Nome do comprador:</p>
-      <input type="text" placeholder="Digite seu nome...">
-      <p>CPF do comprador:</p>
-      <input type="text" placeholder="Digite seu CPF...">
-    </div>
-
-    <div class="button">
-      <p>Reservar assento(s)</p>
-    </div>
-    <div class="padding"></div>
-
-    <p class="final-title">Pedido feito com sucesso!</p>
-    <div class="padding"></div>
-
-    <div class="ticket">
-      <div>
-        <h1>Filme e sessão</h1>
-        <p>Enola Holmes</p>
-        <p>24/06/2021 15:00</p>
-      </div>
-      <div>
-        <h1>Filme e sessão</h1>
-        <p>Enola Holmes</p>
-        <p>24/06/2021 15:00</p>
-      </div>
-      <div>
-        <h1>Filme e sessão</h1>
-        <p>Enola Holmes</p>
-        <p>24/06/2021 15:00</p>
-      </div>
-    </div>
-
-    <div class="button">Voltar pra Home</div>
-    <div class="padding"></div>
-    <div class="padding-footer"></div>
-
-    <div class="footer">
-      <img src="./assets/img/movieimage.png" alt="ticketimg">
-      <div>
-        <p>Enola Holmes</p>
-        <p>Quarta-Feira - 15:00</p>
-      </div>
-    </div>
-
-
-
-
-
-
-
-
+   
   </div>
 </body>
 
